Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Mourinho nếm trái đắng trong loạt luân lưu",
+    "content": "HLV Jose Mourinho cùng Fenerbahce đã phải chịu thất bại đau đớn trước Rangers trong loạt luân lưu ở vòng 1/8 Europa League, sau khi hòa tổng tỷ số 3-3. Dù Fenerbahce đã xuất sắc giành chiến thắng 2-0 ở trận lượt về, nhưng họ không thể vượt qua loạt sút luân lưu và bị loại với tỷ số 2-3. Đây là một cú sốc lớn cho Mourinho, người đã dẫn dắt đội bóng Thổ Nhĩ Kỳ từ hè 2024 và vẫn còn cơ hội tại các giải quốc nội.",
+    "link": "https://vnexpress.net/mourinho-nem-trai-dang-trong-loat-luan-luu-4861106.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Fenerbahce đã bị loại khỏi Europa League như thế nào?",
+    "answers": [
+      {
+        "text": "Thua Rangers trong loạt luân lưu",
+        "correct": true
+      },
+      {
+        "text": "Thua 1-3 trong trận lượt đi",
+        "correct": false
+      },
+      {
+        "text": "Bị loại vì không đủ điểm",
+        "correct": false
+      },
+      {
+        "text": "Thua 0-2 ở trận lượt về",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đăng ký xe hơi 5 chỗ biển vàng lần đầu, phải làm thủ tục như thế nào?",
     "content": "Để đăng ký xe hơi 5 chỗ biển vàng lần đầu, bạn cần thực hiện một số thủ tục theo quy định. Đầu tiên, bạn phải có Giấy phép kinh doanh vận tải, sau đó có thể đăng ký xe thông qua dịch vụ công trực tuyến hoặc trực tiếp tại cơ quan đăng ký xe. Nếu đăng ký trực tuyến, bạn cần kê khai thông tin, nhận mã hồ sơ, và nộp lệ phí theo quy định. Thời gian xử lý hồ sơ không quá 2 ngày làm việc.",
     "link": "https://tuoitre.vn/dang-ky-xe-hoi-5-cho-bien-vang-lan-dau-phai-lam-thu-tuc-nhu-the-nao-20250313231903602.htm",
@@ -1283,60 +1310,6 @@
     ]
   },
   {
-    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
-    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
-    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
-    "answers": [
-      {
-        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
-        "correct": true
-      },
-      {
-        "text": "Vì tiêm vaccine là bắt buộc.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm cân.",
-        "correct": false
-      },
-      {
-        "text": "Vaccine HPV chỉ dành cho nam giới.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
-    "answers": [
-      {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
-        "correct": true
-      },
-      {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
-        "correct": false
-      },
-      {
-        "text": "Vì không thích kết quả thẩm mỹ.",
-        "correct": false
-      },
-      {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
     "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
     "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
@@ -1386,6 +1359,60 @@
       },
       {
         "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "answers": [
+      {
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "correct": true
+      },
+      {
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "correct": false
+      },
+      {
+        "text": "Vì không thích kết quả thẩm mỹ.",
+        "correct": false
+      },
+      {
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
+    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
+    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
+    "answers": [
+      {
+        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
+        "correct": true
+      },
+      {
+        "text": "Vì tiêm vaccine là bắt buộc.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm cân.",
+        "correct": false
+      },
+      {
+        "text": "Vaccine HPV chỉ dành cho nam giới.",
         "correct": false
       }
     ]
@@ -1503,33 +1530,6 @@
     ]
   },
   {
-    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
-    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
-    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
-    "answers": [
-      {
-        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
-        "correct": true
-      },
-      {
-        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
-        "correct": false
-      },
-      {
-        "text": "Vì ông không đủ điều kiện tài chính",
-        "correct": false
-      },
-      {
-        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
     "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
     "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
@@ -1579,6 +1579,33 @@
       },
       {
         "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
+    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
+    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
+    "answers": [
+      {
+        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
+        "correct": true
+      },
+      {
+        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
+        "correct": false
+      },
+      {
+        "text": "Vì ông không đủ điều kiện tài chính",
+        "correct": false
+      },
+      {
+        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
         "correct": false
       }
     ]
@@ -2573,37 +2600,6 @@
     ]
   },
   {
-    "title": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam': Sử dụng điện tiết kiệm, an toàn và đúng cách",
-    "content": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' được tổ chức bởi Tổng công ty Điện lực miền Nam (EVNSPC) nhằm tuyên truyền về việc sử dụng điện tiết kiệm, an toàn và đúng cách. Lễ phát động cuộc thi diễn ra vào ngày 11-3-2025, đánh dấu kỷ niệm 50 năm thành lập ngành điện miền Nam và 50 năm giải phóng miền Nam, thống nhất đất nước. Cuộc thi không chỉ nhằm nâng cao nhận thức của người dân về việc tiết kiệm điện mà còn góp phần vào an ninh năng lượng quốc gia.",
-    "link": "https://tuoitre.vn/cuoc-thi-clip-50-nam-toa-sang-mien-nam-su-dung-dien-tiet-kiem-an-toan-va-dung-cach-20250313151048279.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' có mục đích gì?",
-    "answers": [
-      {
-        "text": "Tuyên truyền sử dụng điện tiết kiệm, an toàn và đúng cách",
-        "correct": true
-      },
-      {
-        "text": "Khuyến khích sử dụng điện một cách tự do",
-        "correct": false
-      },
-      {
-        "text": "Thiết lập quy định mới về sử dụng điện",
-        "correct": false
-      },
-      {
-        "text": "Đánh giá chất lượng điện năng",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức hội thảo về điện năng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Suzuki Swift sắp trở lại Việt Nam, nhập khẩu Nhật Bản",
     "content": "Mẫu xe Suzuki Swift thế hệ thứ 4 sẽ trở lại thị trường Việt Nam và được nhập khẩu trực tiếp từ Nhật Bản, dự kiến ra mắt vào cuối quý II năm 2025. Các đại lý hiện đang nhận cọc từ khách hàng và xe đã về cảng để làm thủ tục thông quan. So với phiên bản trước, Swift mới có một số cải tiến về thiết kế, đặc biệt là khoang lái, mặc dù kích thước tổng thể gần như không thay đổi.",
     "link": "https://vnexpress.net/suzuki-swift-sap-tro-lai-viet-nam-nhap-khau-nhat-ban-4860834.html",
@@ -2630,6 +2626,37 @@
       },
       {
         "text": "Đầu quý IV năm 2025",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam': Sử dụng điện tiết kiệm, an toàn và đúng cách",
+    "content": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' được tổ chức bởi Tổng công ty Điện lực miền Nam (EVNSPC) nhằm tuyên truyền về việc sử dụng điện tiết kiệm, an toàn và đúng cách. Lễ phát động cuộc thi diễn ra vào ngày 11-3-2025, đánh dấu kỷ niệm 50 năm thành lập ngành điện miền Nam và 50 năm giải phóng miền Nam, thống nhất đất nước. Cuộc thi không chỉ nhằm nâng cao nhận thức của người dân về việc tiết kiệm điện mà còn góp phần vào an ninh năng lượng quốc gia.",
+    "link": "https://tuoitre.vn/cuoc-thi-clip-50-nam-toa-sang-mien-nam-su-dung-dien-tiet-kiem-an-toan-va-dung-cach-20250313151048279.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' có mục đích gì?",
+    "answers": [
+      {
+        "text": "Tuyên truyền sử dụng điện tiết kiệm, an toàn và đúng cách",
+        "correct": true
+      },
+      {
+        "text": "Khuyến khích sử dụng điện một cách tự do",
+        "correct": false
+      },
+      {
+        "text": "Thiết lập quy định mới về sử dụng điện",
+        "correct": false
+      },
+      {
+        "text": "Đánh giá chất lượng điện năng",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức hội thảo về điện năng",
         "correct": false
       }
     ]
