--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,68 @@
     */
     const newsData = [
   {
+    "title": "Kipchoge lần đầu dự Sydney Marathon",
+    "content": "Huyền thoại Eliud Kipchoge sẽ tham gia Sydney Marathon 2025 vào ngày 31/8, đánh dấu lần đầu tiên giải này gia nhập hệ thống World Marathon Majors. Sau khi từ chối tham gia vào năm 2024 để chuẩn bị cho Olympic Paris, Kipchoge đã xác nhận sẽ thi đấu tại sự kiện đầu tiên của Sydney Marathon. Chủ tịch Liên đoàn điền kinh Australia hy vọng sự góp mặt của Kipchoge sẽ thúc đẩy phong trào marathon tại Australia.",
+    "link": "https://vnexpress.net/kipchoge-lan-dau-du-sydney-marathon-4861130.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Kipchoge sẽ tham gia giải marathon nào vào năm 2025?",
+    "answers": [
+      {
+        "text": "Sydney Marathon",
+        "correct": true
+      },
+      {
+        "text": "Berlin Marathon",
+        "correct": false
+      },
+      {
+        "text": "London Marathon",
+        "correct": false
+      },
+      {
+        "text": "Tokyo Marathon",
+        "correct": false
+      },
+      {
+        "text": "Cape Town Marathon",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Kiến nghị hỗ trợ gần 9.500 tỷ đồng xây cao tốc Cam Lộ - Lao Bảo",
+    "content": "UBND tỉnh Quảng Trị đã kiến nghị Chính phủ hỗ trợ 9.479 tỷ đồng để xây dựng cao tốc Cam Lộ - Lao Bảo theo hình thức đối tác công tư PPP. Dự án cao tốc dài 56 km với điểm đầu tại huyện Cam Lộ và điểm cuối tại thị trấn Lao Bảo, dự kiến có tổng mức đầu tư gần 13.940 tỷ đồng. Cao tốc này sẽ hỗ trợ phát triển kinh tế xã hội của tỉnh và kết nối với các nước láng giềng như Lào và Thái Lan.",
+    "link": "https://vnexpress.net/kien-nghi-ho-tro-gan-9-500-ty-dong-xay-cao-toc-cam-lo-lao-bao-4860862.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tỉnh Quảng Trị kiến nghị bao nhiêu tiền để xây dựng cao tốc Cam Lộ - Lao Bảo?",
+    "answers": [
+      {
+        "text": "9.479 tỷ đồng",
+        "correct": true
+      },
+      {
+        "text": "4.460 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "1.600 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "13.940 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "3.009 tỷ đồng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mourinho nếm trái đắng trong loạt luân lưu",
     "content": "HLV Jose Mourinho cùng Fenerbahce đã phải chịu thất bại đau đớn trước Rangers trong loạt luân lưu ở vòng 1/8 Europa League, sau khi hòa tổng tỷ số 3-3. Dù Fenerbahce đã xuất sắc giành chiến thắng 2-0 ở trận lượt về, nhưng họ không thể vượt qua loạt sút luân lưu và bị loại với tỷ số 2-3. Đây là một cú sốc lớn cho Mourinho, người đã dẫn dắt đội bóng Thổ Nhĩ Kỳ từ hè 2024 và vẫn còn cơ hội tại các giải quốc nội.",
     "link": "https://vnexpress.net/mourinho-nem-trai-dang-trong-loat-luan-luu-4861106.html",
@@ -691,32 +753,28 @@
     ]
   },
   {
-    "title": "'Quả bom' dân số già của Malaysia",
-    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
-    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
+    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
+    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
+    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
     "answers": [
       {
-        "text": "Già hóa dân số",
+        "text": "Chấp nhận thực tế khác với kỳ vọng",
         "correct": true
       },
       {
-        "text": "Tỷ lệ sinh tăng",
+        "text": "Không cho trẻ sử dụng thiết bị điện tử",
         "correct": false
       },
       {
-        "text": "Thiếu lao động trẻ",
+        "text": "Luôn cứng rắn và không nhượng bộ con",
         "correct": false
       },
       {
-        "text": "Gia tăng tỷ lệ thất nghiệp",
-        "correct": false
-      },
-      {
-        "text": "Chăm sóc trẻ em",
+        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
         "correct": false
       }
     ]
@@ -776,28 +834,32 @@
     ]
   },
   {
-    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
-    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
-    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
+    "title": "'Quả bom' dân số già của Malaysia",
+    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
+    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
     "answers": [
       {
-        "text": "Chấp nhận thực tế khác với kỳ vọng",
+        "text": "Già hóa dân số",
         "correct": true
       },
       {
-        "text": "Không cho trẻ sử dụng thiết bị điện tử",
+        "text": "Tỷ lệ sinh tăng",
         "correct": false
       },
       {
-        "text": "Luôn cứng rắn và không nhượng bộ con",
+        "text": "Thiếu lao động trẻ",
         "correct": false
       },
       {
-        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
+        "text": "Gia tăng tỷ lệ thất nghiệp",
+        "correct": false
+      },
+      {
+        "text": "Chăm sóc trẻ em",
         "correct": false
       }
     ]
@@ -1700,28 +1762,28 @@
     ]
   },
   {
-    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
-    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
-    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
+    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
+    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
+    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
     "cat": "suc-khoe",
     "positivity": 8,
     "importance": 9,
-    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
+    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
     "answers": [
       {
-        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
+        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
         "correct": true
       },
       {
-        "text": "Vì tiêm vaccine là bắt buộc.",
+        "text": "Chất xơ, đường, muối, protein",
         "correct": false
       },
       {
-        "text": "Để giảm cân.",
+        "text": "Vitamin D, canxi, sắt, đồng",
         "correct": false
       },
       {
-        "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
         "correct": false
       }
     ]
@@ -1781,28 +1843,28 @@
     ]
   },
   {
-    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
-    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
-    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
+    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
+    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
+    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
     "cat": "suc-khoe",
     "positivity": 8,
     "importance": 9,
-    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
+    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
     "answers": [
       {
-        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
+        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
         "correct": true
       },
       {
-        "text": "Chất xơ, đường, muối, protein",
+        "text": "Vì tiêm vaccine là bắt buộc.",
         "correct": false
       },
       {
-        "text": "Vitamin D, canxi, sắt, đồng",
+        "text": "Để giảm cân.",
         "correct": false
       },
       {
-        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
+        "text": "Vaccine HPV chỉ dành cho nam giới.",
         "correct": false
       }
     ]
@@ -1920,6 +1982,33 @@
     ]
   },
   {
+    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
+    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
+    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
+    "answers": [
+      {
+        "text": "Bank Negara Indonesia (BNI)",
+        "correct": true
+      },
+      {
+        "text": "Ngân hàng Trung ương Indonesia",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Thế giới",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Phát triển Châu Á",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
     "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
     "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
@@ -1969,33 +2058,6 @@
       },
       {
         "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
-    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
-    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
-    "answers": [
-      {
-        "text": "Bank Negara Indonesia (BNI)",
-        "correct": true
-      },
-      {
-        "text": "Ngân hàng Trung ương Indonesia",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Thế giới",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Phát triển Châu Á",
         "correct": false
       }
     ]
@@ -3218,6 +3280,33 @@
     ]
   },
   {
+    "title": "Đau khớp háng có nên đi bộ?",
+    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
+    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đau khớp háng có nên đi bộ không?",
+    "answers": [
+      {
+        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
+        "correct": true
+      },
+      {
+        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
+        "correct": false
+      },
+      {
+        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Làm thế nào nhận biết rối loạn tiền đình?",
     "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
     "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
@@ -3271,33 +3360,6 @@
       },
       {
         "text": "Vì thích chơi game hơn học",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đau khớp háng có nên đi bộ?",
-    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
-    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Đau khớp háng có nên đi bộ không?",
-    "answers": [
-      {
-        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
-        "correct": true
-      },
-      {
-        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
-        "correct": false
-      },
-      {
-        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
         "correct": false
       }
     ]
