Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -135,6 +135,33 @@
     ]
   },
   {
+    "title": "Nhạc sĩ Nguyễn Thụy Kha đang viết dở hồi ký, không ngại va chạm đồng nghiệp",
+    "content": "Nhạc sĩ Nguyễn Thụy Kha đã qua đời vào ngày 13/3/2025, để lại nhiều kỷ niệm đẹp cho bạn bè và đồng nghiệp. Ông được biết đến không chỉ qua những tác phẩm âm nhạc mà còn qua những đóng góp trong lĩnh vực nghiên cứu và phê bình âm nhạc. Trước khi qua đời, ông đang viết dở một cuốn hồi ký dài khoảng 700 trang và đã giao bản thảo cho con gái nhà văn Nguyễn Trung Đức để hoàn thiện. Ông được mô tả là người sống thẳng thắn, có trí nhớ tốt và luôn không ngại va chạm trong nghệ thuật.",
+    "link": "https://dantri.com.vn/giai-tri/nhac-si-nguyen-thuy-kha-dang-viet-do-hoi-ky-khong-ngai-va-cham-dong-nghiep-20250313183905999.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Nhạc sĩ Nguyễn Thụy Kha đã viết dở tác phẩm gì trước khi qua đời?",
+    "answers": [
+      {
+        "text": "Hồi ký văn nghệ",
+        "correct": true
+      },
+      {
+        "text": "Tiểu thuyết",
+        "correct": false
+      },
+      {
+        "text": "Tập thơ",
+        "correct": false
+      },
+      {
+        "text": "Sách nghiên cứu âm nhạc",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Kipchoge lần đầu dự Sydney Marathon",
     "content": "Huyền thoại Eliud Kipchoge sẽ tham gia Sydney Marathon 2025 vào ngày 31/8, đánh dấu lần đầu tiên giải này gia nhập hệ thống World Marathon Majors. Sau khi từ chối tham gia vào năm 2024 để chuẩn bị cho Olympic Paris, Kipchoge đã xác nhận sẽ thi đấu tại sự kiện đầu tiên của Sydney Marathon. Chủ tịch Liên đoàn điền kinh Australia hy vọng sự góp mặt của Kipchoge sẽ thúc đẩy phong trào marathon tại Australia.",
     "link": "https://vnexpress.net/kipchoge-lan-dau-du-sydney-marathon-4861130.html",
@@ -1480,33 +1507,6 @@
     ]
   },
   {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
-    "answers": [
-      {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
-        "correct": true
-      },
-      {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
-        "correct": false
-      },
-      {
-        "text": "Vì không thích kết quả thẩm mỹ.",
-        "correct": false
-      },
-      {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
     "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
     "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
@@ -1529,6 +1529,33 @@
       },
       {
         "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "answers": [
+      {
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "correct": true
+      },
+      {
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "correct": false
+      },
+      {
+        "text": "Vì không thích kết quả thẩm mỹ.",
+        "correct": false
+      },
+      {
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
@@ -2569,6 +2596,33 @@
     ]
   },
   {
+    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
+    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 9,
+    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
+    "answers": [
+      {
+        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
+        "correct": false
+      },
+      {
+        "text": "Không có tác động đến sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "ENT Masterclass lần đầu đào tạo tai mũi họng và phẫu thuật cổ tại Việt Nam",
     "content": "Hội nghị ENT Masterclass lần đầu tiên được tổ chức tại Việt Nam sẽ diễn ra vào ngày 31/3 và 1/4 tại Bệnh viện Đa khoa Hồng Ngọc. Sự kiện này quy tụ 33 bài báo cáo chuyên sâu về tai mũi họng và phẫu thuật cổ, với sự tham gia của các chuyên gia hàng đầu quốc tế và trong nước. Mục tiêu của hội nghị là nâng cao trình độ chuyên môn cho các bác sĩ Việt Nam và kết nối cộng đồng y khoa toàn cầu.",
     "link": "https://vnexpress.net/ent-masterclass-lan-dau-dao-tao-tai-mui-hong-va-phau-thuat-co-tai-viet-nam-4860526.html",
@@ -2595,33 +2649,6 @@
       },
       {
         "text": "29/3 và 30/3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
-    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
-    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 9,
-    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
-    "answers": [
-      {
-        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
-        "correct": false
-      },
-      {
-        "text": "Không có tác động đến sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
         "correct": false
       }
     ]
@@ -2971,28 +2998,28 @@
     ]
   },
   {
-    "title": "Làm thế nào nhận biết rối loạn tiền đình?",
-    "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
-    "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
+    "title": "Đau khớp háng có nên đi bộ?",
+    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
+    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
     "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Làm thế nào để nhận biết rối loạn tiền đình?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đau khớp háng có nên đi bộ không?",
     "answers": [
       {
-        "text": "Đi khám tại bệnh viện chuyên khoa Tai Mũi Họng hoặc Thần kinh.",
+        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
         "correct": true
       },
       {
-        "text": "Uống thuốc tự điều trị tại nhà.",
+        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
         "correct": false
       },
       {
-        "text": "Thực hiện bài tập thể dục hàng ngày.",
+        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
         "correct": false
       },
       {
-        "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
+        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
         "correct": false
       }
     ]
@@ -3029,28 +3056,28 @@
     ]
   },
   {
-    "title": "Đau khớp háng có nên đi bộ?",
-    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
-    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
+    "title": "Làm thế nào nhận biết rối loạn tiền đình?",
+    "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
+    "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Đau khớp háng có nên đi bộ không?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Làm thế nào để nhận biết rối loạn tiền đình?",
     "answers": [
       {
-        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
+        "text": "Đi khám tại bệnh viện chuyên khoa Tai Mũi Họng hoặc Thần kinh.",
         "correct": true
       },
       {
-        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
+        "text": "Uống thuốc tự điều trị tại nhà.",
         "correct": false
       },
       {
-        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
+        "text": "Thực hiện bài tập thể dục hàng ngày.",
         "correct": false
       },
       {
-        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
+        "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
         "correct": false
       }
     ]
@@ -3105,37 +3132,6 @@
       },
       {
         "text": "Vì Nga đã chặn mọi nguồn cung cấp vũ khí.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nhà thơ, nhạc sĩ Nguyễn Thụy Kha qua đời",
-    "content": "Nhà thơ, nhạc sĩ Nguyễn Thụy Kha đã qua đời vào hồi 10h45 ngày 13/3 tại Hà Nội, sau thời gian chống chọi với căn bệnh ung thư đại tràng. Ông sinh năm 1949 tại Hải Phòng và là hội viên Hội Nhà văn Việt Nam từ năm 1990. Nguyễn Thụy Kha là tác giả của nhiều tác phẩm nổi tiếng về âm nhạc và văn chương, cũng như có nhiều bài thơ được phổ nhạc.",
-    "link": "https://dantri.com.vn/giai-tri/nha-tho-nhac-si-nguyen-thuy-kha-qua-doi-20250313134208549.htm",
-    "cat": "giai-tri",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Nguyễn Thụy Kha đã qua đời vào thời gian nào?",
-    "answers": [
-      {
-        "text": "10h45 ngày 13/3",
-        "correct": true
-      },
-      {
-        "text": "8h00 ngày 12/3",
-        "correct": false
-      },
-      {
-        "text": "15h30 ngày 14/3",
-        "correct": false
-      },
-      {
-        "text": "9h00 ngày 13/3",
-        "correct": false
-      },
-      {
-        "text": "12h45 ngày 14/3",
         "correct": false
       }
     ]
